# PyCarnatic

./: .gitignore  LICENSE  README.md  carnatic_music_guru.spec  cli.py  pyproject.toml  req_lat.txt  requirements.txt  requirements_office.txt  requirements_personal.txt  score_output.txt  setup.py  test_notes.inp
carnatic/: README.md  __init__.py  _package_info.py  cdeeplearn.py  cmarkov.py  cmarkovn.py  cmidi.py  config.py  cparser.py  cplayer.py  cthread.py  example.py  lessons.py  midi2audio.py  raaga.py  raaga_search.py  score_output.txt  settings.py  sfplayer.py  song.py  test_lesson.inp  test_notes.inp  thaaLa.py
carnatic/Lessons/: delme.txt
carnatic/Notes/: Bhuvana_NoteSkippingExercise.cmn  PancharathnaKrithi-Dudukugala.cmn  PancharathnaKrithi-Dudukugala_1.cmn  PancharathnaKrithi-Endharoi.cmn  PancharathnaKrithi-Kanakanaruchi.cmn  PancharathnaKrithi-Saadhinchane.cmn  PancharathnaKrithi-Saadhinchane_1.cmn  PancharathnaKrithi-jagadhaandhakaaraka.cmn  PancharathnaKrithi-jagadhaandhakaaraka_1.cmn  RajiBhuvana_Saaramathi_Mokshamu_Aalaapana_Niraval.cmn  delme.cmn  vAtApi_Adhi.cmn  vAtApi_Adhi_1.cmn
carnatic/config/: jraaga.inp  krithi_list.inp  quiz_bank.db  raaga_list.inp  raaga_list_full.inp  (+5 more)
diff-with-0.7.5/: cdeeplearn.htm  cparser.htm  cplayer.htm  lessons.htm  raaga.htm  settings.htm  song.htm  thaaLa.htm
examples/: Abhogi_kalpana_swaram.txt  Bhairavi_kalpana_swaram.txt  Hamsadhwani_kalpana_swaram.txt  log.txt  mohanam_kalpana_swaram.txt  test_lessons.py  test_parser.py  test_player.py  test_raaga.py  test_song.py  test_thaaLam.py  test_tutor.py
(+256 files in other folders)
